# AllegroAgent

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
ai_agent_framework/: __init__.py  _client.py  agent.py  client.py  exceptions.py
ai_agent_framework/providers/: __init__.py  base.py  ollama.py
ai_agent_framework/tools/: __init__.py  file_write.py
allegro_agent/: __init__.py  agent.py  exceptions.py
allegro_agent/providers/: base.py
allegro_agent/tools/: __init__.py  base.py  file_read.py
tests/: test_agent.py
