[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-framework"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_agent_framework*"]
