[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "allegro-agent"
version = "0.3.0"
description = "A lightweight, extensible Python framework for building stateful AI agents with tool use, backed by local or remote LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Ajith Raghavan" },
]
keywords = ["agent", "llm", "ai", "ollama", "tool-use", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/ajithraghavan/AllegroAgent"
Repository = "https://github.com/ajithraghavan/AllegroAgent"
Issues = "https://github.com/ajithraghavan/AllegroAgent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["allegro_agent*"]
